@@ -623,7 +623,7 @@ mod test {
         let gil = Python::acquire_gil();
         let py = gil.python();
         let array = py.import("array").unwrap().call_method(
-            "array", ("f", (1.0, 1.5, 2.0, 2.5)), None).unwrap();
+            "array", ("f", (1.0, 1.5, 2.0, 2.5)), NoArgs).unwrap();
         let buffer = PyBuffer::get(py, array.into()).unwrap();
         assert_eq!(buffer.dimensions(), 1);
         assert_eq!(buffer.item_count(), 4);
