@@ -6,8 +6,8 @@ pub use self::typeobject::PyType;
 pub use self::module::PyModule;
 pub use self::iterator::PyIterator;
 pub use self::boolobject::PyBool;
-pub use self::bytearray::{PyByteArray};
-pub use self::tuple::{PyTuple, NoArgs};
+pub use self::bytearray::PyByteArray;
+pub use self::tuple::PyTuple;
 pub use self::dict::PyDict;
 pub use self::list::PyList;
 pub use self::floatob::PyFloat;
